--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 serviceAccountKey.json
 requests.rest
 test-file.pptx
-test-image-jpg
+test-image.jpg
 node_modules
+text
+requests.rest
+request.rest
